create mobile markup

--- a/index.html
+++ b/index.html
@@ -113,6 +113,67 @@
     </header>
     <main>
       <section class="hero hero-overlay">
+        <svg
+          class="icon-mtb"
+          width="65"
+          height="92"
+          viewBox="0 0 65 92"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M24.9473 -18.3227C4.04133 9.71517 12.0961 51.3802 41.9459 69.6059C57.402 79.0431 69.7173 79.9011 87.7588 76.7862C105.7 73.6885 116.81 66.2188 126.448 50.7724"
+            stroke="#E0FF00"
+            stroke-width="26"
+            stroke-linecap="round"
+          />
+        </svg>
+        <svg
+          class="icon-mbr"
+          width="49"
+          height="73"
+          viewBox="0 0 49 73"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M34.6318 74.6335C23.1207 62.8785 7.42356 53.5323 9.79498 36.6846C11.21 26.6319 14.5101 20.8064 22.474 15.1876C30.3938 9.6 37.7752 9.28521 46.8302 10.4162"
+            stroke="#343431"
+            stroke-width="19"
+            stroke-linecap="round"
+          />
+        </svg>
+        <svg
+          class="check-mcr"
+          width="71"
+          height="79"
+          viewBox="0 0 71 79"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M8.26013 51.5078C8.26013 51.5078 10.6441 52.966 20.843 62.0201C28.7717 69.0588 33.7983 70.9094 43.4308 70.66C53.8734 70.3897 55.4829 15.3881 62.2529 7.99994"
+            stroke="#343431"
+            stroke-width="15.7984"
+            stroke-linecap="round"
+          />
+        </svg>
+        <svg
+          class="check-mlb"
+          width="52"
+          height="45"
+          viewBox="0 0 52 45"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1.56916 16.4837C1.56916 16.4837 2.50807 17.9944 5.71986 26.0586C8.21673 32.3277 10.5462 34.817 16.0953 37.4286C22.1111 40.2599 38.7484 9.44175 44.7102 7.17541"
+            stroke="#343431"
+            stroke-width="13"
+            stroke-linecap="round"
+          />
+        </svg>
+
         <div class="container hero-container">
           <ul class="excellence-list">
             <li class="excellence-item">
@@ -125,11 +186,39 @@
           <h1 class="hero-title">Таргетована реклама</h1>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 16 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M2 8.75L6.75 13.5L14 1.5"
+                  stroke="#E0FF00"
+                  stroke-width="3"
+                />
+              </svg>
+
               <p class="advantages-text" lang="ru">
                 Трудоустройство для выпускников
               </p>
             </li>
             <li class="advantages-item">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 16 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M2 8.75L6.75 13.5L14 1.5"
+                  stroke="#E0FF00"
+                  stroke-width="3"
+                />
+              </svg>
+
               <p class="advantages-text" lang="ru">
                 Новейшие программы для 2022 года +
               </p>
@@ -165,64 +254,77 @@
                 </li>
               </ul>
             </div>
-
-            <button type="button">записатись на курс</button>
-            <p>Залишилось <span>3 місця</span> на курсі</p>
+            <div class="subscribe-container">
+              <button class="subscribe-btn" type="button">
+                записатись на курс
+              </button>
+              <p class="subscribe-text">
+                Залишилось <span class="subscribe-text-accent">3 місця</span> на
+                курсі
+              </p>
+            </div>
           </div>
+          <svg class="" width="" height="">
+            <use href="./images/icons/hemisphere-dbl.svg"></use>
+          </svg>
         </div>
       </section>
       <section class="about">
-        <div class="container">
-          <h2>Кому підійде навчання</h2>
-          <ul>
-            <li>
+        <div class="container about-container">
+          <h2 class="about-title">Кому підійде навчання</h2>
+          <ul class="about-list">
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#achievement"></use>
               </svg>
-              <p>Початківцям маркетологам</p>
-              <p>Початківцям інтернет-маркетологам</p>
+              <p class="about-text about-text-first">
+                Початківцям маркетологам
+              </p>
+              <p class="about-text about-text-second">
+                Початківцям інтернет-маркетологам
+              </p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#click"></use>
               </svg>
-              <p>Початківцям інтернет-маркетологам</p>
+              <p class="about-text">Початківцям інтернет-маркетологам</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#achieve"></use>
               </svg>
-              <p>Досвідченим маркетологам</p>
+              <p class="about-text">Досвідченим маркетологам</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#portfolio"></use>
               </svg>
-              <p>Підприємцям-початківцям</p>
+              <p class="about-text">Підприємцям-початківцям</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#shopping"></use>
               </svg>
-              <p>Власникам малого бізенсу</p>
+              <p class="about-text">Власникам малого бізенсу</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#businesssvg"></use>
               </svg>
-              <p>Керівникам відділів маркетингу</p>
+              <p class="about-text">Керівникам відділів маркетингу</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#bullhorn"></use>
               </svg>
-              <p>Керівникам проектів</p>
+              <p class="about-text">Керівникам проектів</p>
             </li>
-            <li>
+            <li class="about-item">
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#sms"></use>
               </svg>
-              <p>Початківцямсмм-менеджерам</p>
+              <p class="about-text">Початківцямсмм-менеджерам</p>
             </li>
           </ul>
         </div>
