--- a/index.html
+++ b/index.html
@@ -26,34 +26,33 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Офлайн програми</a
                 >
-                <span>
-                  <svg class="" width="7" height="4">
-                    <use href="/images/icons/sprite.svg#polygon"></use>
-                  </svg>
-                </span>
+
+                <svg width="7" height="4">
+                  <use href="/images/icons/sprite.svg#polygon"></use>
+                </svg>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Онлайн програми</a
                 >
-                <span>
-                  <svg class="" width="7" height="4">
-                    <use href="/images/icons/sprite.svg#polygon"></use></svg
-                ></span>
+
+                <svg width="7" height="4">
+                  <use href="/images/icons/sprite.svg#polygon"></use>
+                </svg>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Розклад</a
@@ -77,15 +76,14 @@
                   >Тести</a
                 >
 
-                <span>
-                  <svg class="" width="7" height="4">
-                    <use href="/images/icons/sprite.svg#polygon"></use></svg
-                ></span>
+                <svg width="7" height="4">
+                  <use href="/images/icons/sprite.svg#polygon"></use>
+                </svg>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="http://"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Блог</a
@@ -95,7 +93,7 @@
           </nav>
         </div>
         <div class="phone-container">
-          <a href="tel:+380961111111">+38 (099) 123-12-12</a>
+          <a class="phone-link" href="tel:+380961111111">+38 (099) 123-12-12</a>
         </div>
         <div class="btn-container">
           <div class="user-btn-container">
@@ -114,7 +112,7 @@
     <main>
       <section class="hero hero-overlay">
         <svg
-          class="icon-mtb"
+          class="icon-mtr"
           width="65"
           height="92"
           viewBox="0 0 65 92"
@@ -123,6 +121,22 @@
         >
           <path
             d="M24.9473 -18.3227C4.04133 9.71517 12.0961 51.3802 41.9459 69.6059C57.402 79.0431 69.7173 79.9011 87.7588 76.7862C105.7 73.6885 116.81 66.2188 126.448 50.7724"
+            stroke="#E0FF00"
+            stroke-width="26"
+            stroke-linecap="round"
+          />
+        </svg>
+
+        <svg
+          class="icon-dtr"
+          width="105"
+          height="118"
+          viewBox="0 0 105 118"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M28.93 -24.5032C1.11219 12.8044 11.83 68.2445 51.5485 92.4958C72.1146 105.053 88.5015 106.195 112.508 102.05C136.381 97.9282 151.163 87.9889 163.988 67.4357"
             stroke="#E0FF00"
             stroke-width="26"
             stroke-linecap="round"
@@ -143,6 +157,23 @@
             stroke-linecap="round"
           />
         </svg>
+
+        <svg
+          class="icon-dbl"
+          width="102"
+          height="138"
+          viewBox="0 0 102 138"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M24.1986 163.935C49.0364 138.571 82.9068 118.404 77.7898 82.0512C74.7367 60.3602 67.6158 47.7904 50.4318 35.6665C33.3431 23.6099 17.4159 22.9306 -2.12231 25.371"
+            stroke="#343431"
+            stroke-width="47"
+            stroke-linecap="round"
+          />
+        </svg>
+
         <svg
           class="check-mcr"
           width="71"
@@ -170,6 +201,21 @@
             d="M1.56916 16.4837C1.56916 16.4837 2.50807 17.9944 5.71986 26.0586C8.21673 32.3277 10.5462 34.817 16.0953 37.4286C22.1111 40.2599 38.7484 9.44175 44.7102 7.17541"
             stroke="#343431"
             stroke-width="13"
+            stroke-linecap="round"
+          />
+        </svg>
+        <svg
+          class="check-dtl"
+          width="98"
+          height="85"
+          viewBox="0 0 98 85"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M16.7314 45.3248C16.7314 45.3248 19.5985 47.0785 31.8642 57.9674C41.3996 66.4325 47.4449 68.6582 59.0294 68.3583C71.5883 68.0332 73.524 1.8855 81.6658 -6.99993"
+            stroke="#343431"
+            stroke-width="32"
             stroke-linecap="round"
           />
         </svg>
@@ -224,49 +270,48 @@
               </p>
             </li>
           </ul>
-          <ul class="describe-list">
-            <li class="describe-item">
-              <p class="describe-title">Старт курсу:</p>
-              <p class="describe-text">21 березня 2022</p>
-            </li>
-            <li class="describe-item">
-              <p class="describe-title">Тривалість:</p>
-              <p class="describe-text">5 тижнів</p>
-            </li>
-            <li class="describe-item">
-              <p class="describe-title">Рівень знань:</p>
-              <p class="describe-text">Продвинутий</p>
-            </li>
-          </ul>
-          <div class="price">
-            <div class="price-container">
-              <p class="price-title">Вартість:</p>
-              <ul class="price-list">
-                <li class="price-item">
-                  <p class="price-before">
-                    20 000 <span class="price-before-text">грн</span>
-                  </p>
-                </li>
-                <li class="price-item">
-                  <p class="price-after">
-                    16 000 <sup class="price-sup">грн</sup>
-                  </p>
-                </li>
-              </ul>
-            </div>
-            <div class="subscribe-container">
-              <button class="subscribe-btn" type="button">
-                записатись на курс
-              </button>
-              <p class="subscribe-text">
-                Залишилось <span class="subscribe-text-accent">3 місця</span> на
-                курсі
-              </p>
+          <div class="position-container">
+            <ul class="describe-list">
+              <li class="describe-item">
+                <p class="describe-title">Старт курсу:</p>
+                <p class="describe-text">21 березня 2022</p>
+              </li>
+              <li class="describe-item">
+                <p class="describe-title">Тривалість:</p>
+                <p class="describe-text">5 тижнів</p>
+              </li>
+              <li class="describe-item">
+                <p class="describe-title">Рівень знань:</p>
+                <p class="describe-text">Продвинутий</p>
+              </li>
+            </ul>
+            <div class="price">
+              <div class="price-container">
+                <p class="price-title">Вартість:</p>
+                <ul class="price-list">
+                  <li class="price-item">
+                    <p class="price-before">
+                      20 000 <span class="price-before-text">грн</span>
+                    </p>
+                  </li>
+                  <li class="price-item">
+                    <p class="price-after">
+                      16 000 <sup class="price-sup">грн</sup>
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="subscribe-container">
+                <button class="subscribe-btn" type="button">
+                  записатись на курс
+                </button>
+                <p class="subscribe-text">
+                  Залишилось
+                  <span class="subscribe-text-accent">3 місця</span> на курсі
+                </p>
+              </div>
             </div>
           </div>
-          <svg class="" width="" height="">
-            <use href="./images/icons/hemisphere-dbl.svg"></use>
-          </svg>
         </div>
       </section>
       <section class="about">
@@ -318,7 +363,10 @@
               <svg class="about-icon" width="80" height="80">
                 <use href="/images/icons/sprite.svg#bullhorn"></use>
               </svg>
-              <p class="about-text">Керівникам проектів</p>
+              <p class="about-text">
+                Керівникам <br />
+                проектів
+              </p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
