--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <ul class="about-list">
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#achievement"></use>
+                <use href="./images/icons/sprite.svg#achievement"></use>
               </svg>
               <p class="about-text about-text-first">
                 Початківцям маркетологам
@@ -335,37 +335,37 @@
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#click"></use>
+                <use href="./images/icons/sprite.svg#click"></use>
               </svg>
               <p class="about-text">Початківцям інтернет-маркетологам</p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#achieve"></use>
+                <use href="./images/icons/sprite.svg#achieve"></use>
               </svg>
               <p class="about-text">Досвідченим маркетологам</p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#portfolio"></use>
+                <use href="./images/icons/sprite.svg#portfolio"></use>
               </svg>
               <p class="about-text">Підприємцям-початківцям</p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#shopping"></use>
+                <use href="./images/icons/sprite.svg#shopping"></use>
               </svg>
               <p class="about-text">Власникам малого бізенсу</p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#businesssvg"></use>
+                <use href="./images/icons/sprite.svg#businesssvg"></use>
               </svg>
               <p class="about-text">Керівникам відділів маркетингу</p>
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#bullhorn"></use>
+                <use href="./images/icons/sprite.svg#bullhorn"></use>
               </svg>
               <p class="about-text">
                 Керівникам <br />
@@ -374,7 +374,7 @@
             </li>
             <li class="about-item">
               <svg class="about-icon" width="80" height="80">
-                <use href="/images/icons/sprite.svg#sms"></use>
+                <use href="./images/icons/sprite.svg#sms"></use>
               </svg>
               <p class="about-text">Початківцямсмм-менеджерам</p>
             </li>
