--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container header-container">
         <div class="logo-container">
           <a class="logo" href="./index.html"
-            ><img class="logo-img" src="./images/logo.png" alt="logo" />
+            ><img class="logo-img" src="./images/Logo/logo.svg" alt="logo" />
           </a>
         </div>
         <div class="nav-container">
