--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 >
 
                 <svg width="7" height="4">
-                  <use href="/images/icons/sprite.svg#polygon"></use>
+                  <use href="./images/icons/sprite.svg#polygon"></use>
                 </svg>
               </li>
               <li class="nav-item">
@@ -50,7 +50,7 @@
                 >
 
                 <svg width="7" height="4">
-                  <use href="/images/icons/sprite.svg#polygon"></use>
+                  <use href="./images/icons/sprite.svg#polygon"></use>
                 </svg>
               </li>
               <li class="nav-item">
@@ -81,7 +81,7 @@
                 >
 
                 <svg width="7" height="4">
-                  <use href="/images/icons/sprite.svg#polygon"></use>
+                  <use href="./images/icons/sprite.svg#polygon"></use>
                 </svg>
               </li>
               <li class="nav-item">
