--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <button class="user-btn" type="button">Вхід | Реєстрація</button>
           </div>
           <div class="burger-container">
-            <button class="burger-btn" type="button">
+            <button class="button-menu" type="button">
               <svg class="burger" width="25" height="16">
                 <use href="./images/icons/sprite.svg#burger"></use>
               </svg>
