--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       name="description"
       content="International Marketing Business Academy - Міжнародна Академія Маркетингу та Бізнесу."
     />
-    <title>IMBA</title>
+    <title>International Marketing Business Academy</title>
+    <link rel="icon" href="./images/Favicon/favicon.png" type="image/x-con" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
